--- a/wp-content/mu-plugins/MMM35/blocks/media-text/style.scss
+++ b/wp-content/mu-plugins/MMM35/blocks/media-text/style.scss
@@ -7,7 +7,8 @@
   margin-top: 2rem;
 
   @at-root .wp-block-column > & {
-    align-self: stretch;
+    height: 100%;
+    margin-top: 0rem;
   }
 
   &__media {
