--- a/wp-content/themes/MMM35/styles/hero.scss
+++ b/wp-content/themes/MMM35/styles/hero.scss
@@ -11,7 +11,9 @@
   text-align: center;
 
   &__title {
-    font-size: 3rem;
+    font-size: 3.5rem;
+    line-height: 5rem;
+    margin: 0 2rem;
 
     &-dot {
       &_green { color: $ci-green; }
@@ -30,7 +32,7 @@
     height: 100%;
     width: 100%;
     opacity: 1;
-    transition: opacity 0.2s ease;
+    transition: opacity 0.4s ease;
 
     &_hidden {
       opacity: 0;
@@ -53,4 +55,9 @@
       z-index: 1;
     }
   }
+
+  @at-root .home &_has-image {
+    height: $hero-height-home;
+  }
 }
+
