--- a/wp-content/themes/MMM35/styles/page.scss
+++ b/wp-content/themes/MMM35/styles/page.scss
@@ -24,3 +24,7 @@
 .mmm35-hero_has-image + .mmm35-page {
   margin-top: $hero-height;
 }
+
+.home .mmm35-hero_has-image + .mmm35-page {
+  margin-top: $hero-height-home;
+}
