--- a/wp-content/themes/MMM35/styles/post-list.scss
+++ b/wp-content/themes/MMM35/styles/post-list.scss
@@ -7,11 +7,6 @@
   background: $background;
   width: 100%;
   max-width: 1440px;
-  opacity: 0.8;
-
-  &:hover {
-    opacity: 1;
-  }
 
   &__title {
     margin-left: 0.5rem;
@@ -33,6 +28,11 @@
     text-decoration: none;
     margin: 0.5rem;
     margin: 0.5rem;
+    opacity: 0.8;
+
+    &:hover {
+      opacity: 1;
+    }
 
     > * {
       margin-left: 2rem;
@@ -45,6 +45,7 @@
       max-height: 345px;
       min-height: 345px;
       margin: 0;
+      margin-bottom: 1rem;
 
       img {
         object-fit: cover;
@@ -54,13 +55,16 @@
     }
 
     &-meta {
-      margin-top: 1rem;
+      margin-top: 0rem;
     }
 
     &-title {
       color: $accent;
       margin-top: 0;
+
+      &:first-child {
+        margin-top: 2rem;
+      }
     }
   }
-
 }
